--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -67,8 +67,8 @@ services:
       - S3_CLIENT_ENDPOINT=https://pixeleye-minio.zu.ca
       - S3_ACCESS_KEY_ID=pixeleye
       - S3_KEY_SECRET=CHANGEME
-      - ORY_URL=http://kratos:4433
-      - ORY_ADMIN_URL=http://kratos:4434
+      - ORY_URL=https://pixeleye-kratos.zu.ca
+      - ORY_ADMIN_URL=https://pixeleye-kratos-admin.zu.ca
       - AMQP_USER=guest
       - AMQP_PASSWORD=CHANGEME
       - AMQP_HOST=rabbitmq
